tests/sumo/extended/simulation_routing/personTrip/errors/access_invalid/errors.sumo
Error: Could not add access outside a stopping place.
Quitting (on error).
